refactor : 미사용 생성자 삭제